fix css overlay, fix map not showing

--- a/po/app/css/chat.css
+++ b/po/app/css/chat.css
@@ -494,6 +494,7 @@ body {
 	max-height: 100%;
 	position: fixed;
 	background-color: rgba(0,0,0,0.9);
+	z-index: 999;
 	/*cursor: default;*/
 }
 
@@ -527,7 +528,7 @@ body {
 	background-size: auto 50%;
 	background-position: 50% 50%;
 	background-repeat: no-repeat;
-	z-index: 11;
+	z-index: 3;
 }
 .msg-video.loaded:not(.playing):hover .videoContainer:before{
 	background-image: url("../images/chatroom/chat_message_status_icon_video_click.png");
